--- a/about.html
+++ b/about.html
@@ -54,8 +54,13 @@
         </div>
       </li> -->
       <li class="nav-item active">
-        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
+      </li>
+
 	   <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
       </li>
@@ -124,6 +129,137 @@
 
     </section><!-- End About Section -->
 
+
+    <section class="containerblue">
+      <div class="container">
+      <div class="row example-centered">
+            <div class="col-md-12 example-title">
+                <h1 class="paragraph5"><strong>TIMELINE</strong></h1>
+              </div>
+              <div class="uppermargin">
+
+                <ul class="timeline timeline-centered uppermargin">
+
+                  <li class="timeline-item period">
+                      <div class="timeline-info"></div>
+                      <div class="timeline-content">
+                          <h2 class="paragraph6">2021</h2>
+                      </div>
+                  </li>
+                  <li class="timeline-item">
+                      <div class="timeline-info">
+                          <span>June</span>
+                      </div>
+                      <div class="timeline-marker"></div>
+                      <div class="timeline-content">
+                          <h3 class="timeline-title">Paper Acceptance</h3>
+                          <p>Our paper titled "Investigating the navigational habits of individuals who are blind in India" accepted at The 23rd International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS 2021). Paper due to appear in October.</p>
+                      </div>
+                  </li>
+
+                    <li class="timeline-item">
+                        <div class="timeline-info">
+                            <span>June</span>
+                        </div>
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <h3 class="timeline-title">Thesis Defense</h3>
+                            <p>Successfully defended my thesis titled "Investigating the navigational habits of individuals who are blind in India."</p>
+                        </div>
+                    </li>
+                    <li class="timeline-item">
+                        <div class="timeline-info">
+                            <span>May</span>
+                        </div>
+                        <div class="timeline-marker"></div>
+                        <div class="timeline-content">
+                            <h3 class="timeline-title">Mobility for All</h3>
+                            <p>Collaborative project to develop a prototype for blind runners completed. Done under the supervision of Dr.Ravi Kuber and Dr.Stacy Brahnam. </p>
+                        </div>
+                    </li>
+                </ul>
+
+
+
+                            <ul class="timeline timeline-centered uppermargin">
+
+                              <li class="timeline-item period">
+                                  <div class="timeline-info"></div>
+                                  <div class="timeline-content">
+                                      <h2 class="paragraph6">2020</h2>
+                                  </div>
+                              </li>
+                              <li class="timeline-item">
+                                  <div class="timeline-info">
+                                      <span>September</span>
+                                  </div>
+                                  <div class="timeline-marker"></div>
+                                  <div class="timeline-content">
+                                      <h3 class="timeline-title">UX Researcher, Shared Services Center</h3>
+                                      <p>Became the lead UX Researcher and web developer for the Shared Services Center at the university.</p>
+                                  </div>
+                              </li>
+
+                                <li class="timeline-item">
+                                    <div class="timeline-info">
+                                        <span>March</span>
+                                    </div>
+                                    <div class="timeline-marker"></div>
+                                    <div class="timeline-content">
+                                        <h3 class="timeline-title">Graduate Assistant</h3>
+                                        <p>Graduate Assistant, grading for the subject "Structured Systems Design and Analysis" at the University of Maryland.</p>
+                                    </div>
+                                </li>
+                            </ul>
+
+                                        <ul class="timeline timeline-centered uppermargin">
+
+                                          <li class="timeline-item period">
+                                              <div class="timeline-info"></div>
+                                              <div class="timeline-content">
+                                                  <h2 class="paragraph6">2019</h2>
+                                              </div>
+                                          </li>
+                                          <li class="timeline-item">
+                                              <div class="timeline-info">
+                                                  <span>August</span>
+                                              </div>
+                                              <div class="timeline-marker"></div>
+                                              <div class="timeline-content">
+                                                  <h3 class="timeline-title">Grad School</h3>
+                                                  <p>Started studying Human-Centered Computing at the University of Maryland, Baltimore County.</p>
+                                              </div>
+                                          </li>
+
+
+                                        </ul>
+
+                                        <ul class="timeline timeline-centered uppermargin">
+
+                                          <li class="timeline-item period">
+                                              <div class="timeline-info"></div>
+                                              <div class="timeline-content">
+                                                  <h2 class="paragraph6">2017-2019</h2>
+                                              </div>
+                                          </li>
+                                          <li class="timeline-item">
+                                              <div class="timeline-info">
+                                                  <span>August 2017 - June 2019</span>
+                                              </div>
+                                              <div class="timeline-marker"></div>
+                                              <div class="timeline-content">
+                                                  <h3 class="timeline-title">Software Engineer (UI/UX)</h3>
+                                                  <p>Software Engineer working on front end web development. Experience with Adobe Experience Manager</p>
+                                              </div>
+                                          </li>
+
+                                        </ul>
+
+
+            </div>
+        </div>
+    </div>
+    </section>
 
 
 
