--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Master's Thesis</title>
+  <title>Research Work</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,8 +42,11 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="projects.html"><span class="whitecolor">PROJECTS</span></a>
+      </li>
 	  <li class="nav-item active">
-        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
     <!--  <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
@@ -67,9 +70,7 @@
   <section id="about-page" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-      <h1 align="center"><b>Master's Thesis</b></h1>
-      <div class="rectangle4 shape2"></div>
-      <div class="rectangle6 shape2"></div>
+      <h1 align="center"><b>Research</b></h1>
 
     </div>
   </section><!-- End Hero -->
@@ -77,16 +78,39 @@
   <main id="main">
 
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">  <img src="assets/img/Personal/Poster.png" class="avatar9" alt="">
+    <section>
+      <div class="container grid default-grid">
+        <h3>ASSETS 2021 - PAPER ACCEPTED</h3>
+        <h4><strong>Investigating the navigational habits of people who are blind in India</strong></h4>
+        <p>
+          Our paper</i> has been accepted at ASSETS 2021. Done in collaboration with Dr.Ravi Kuber and Dr.Foad Hamidi from the university of Maryland, Baltimore County, and Raghavendra Prasad from R.V College of Engineering. Here is the abstract for the same:
+        </p>
+        <section class="blockquote-section">
+          <p class="quotemarks justified"><i>Assistive navigational technologies offer considerable promise to people with visual impairments.  However, uptake of these technologies has traditionally been lower in low and middle-income countries (LMICs). In this paper, we describe a qualitative study undertaken with 14 people who identify as legally-blind in India to understand their requirements, experiences, and strategies undertaken when navigating with and without technology. We highlight key nuances that impact navigational habits including strategies to navigate within busy urban environments, strategies to address the impact of the rainy season, techniques used to navigate at night, and dealing with the impact of limited infrastructure. Our findings offer guidance to developers of navigational technologies to consider incorporating cultural, contextual, and technological factors of their users into the design of their systems to cater to a more diverse audience. </i></p>
 
-        </div>
+              </section>
+          <p>
+            Nagraj, A., Kuber, R., Hamidi, F., SG Prasad, R. “Investigating the nvaigational habits of people who are blind in India.” In Proceedings of the ACM SIGACCESS Conference on Computers & Accessibility (ASSETS ‘21), Online Virtual Conference, October 18-22, 2021.- to Appear (Acceptance rate: 29%)
+          </p>
+</div>
+<div class="devicer"></div>
+</section>
 
-      </div>
-    </section><!-- End About Section -->
 
+<section>
+  <div class="container grid default-grid">
+    <h3>TOWARDS CHI 2022</h3>
+    <h4><strong>Exploring factors enabling HCI exposure in South Asia.</strong></h4>
+    <p>
+      Our team from HCI for South Asia community is working towards a paper where we would be outlining the factors enabling the exposure to HCI in South Asia.
+      Done in colalaboration with Pranjal Jain, Kartik Joshi, and Taru Jain.
+    </p>
+    <p>
+      More information coming soon...
+    </p>
 
+</div>
+</section>
 
 
   </main><!-- End #main -->
