--- a/projects.html
+++ b/projects.html
@@ -42,8 +42,13 @@
       <li class="nav-item active">
         <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
+      </li>
+
+
 	  <li class="nav-item active">
-        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT</span></a>
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
       </li>
     <!--  <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
