Commits to buttons

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h1 class="uppermargin paragraph4"> I've done a variety of projects.</h1>
     <h1 class="uppermargin paragraph4"> Be it building products, providing recommendations, or getting into research to provide guidelines.
 </h1>
-<div class="center bottompadding"><button class="custom-btn btn-1" onclick="window.location.href='projects.html'"> VIEW PROJECTS </a></button>
+<div class="center bottompadding"><a href ="projects.html"><button class="custom-btn btn-1"> VIEW PROJECTS </button></a>
   </div>
 </div>
 </section>
