--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
             An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI research and User-Centered Design.
           </p>
 
-        <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button></div>
+        <a href="navigational-aid.html"><button class="custom-btn btn-1">READ MORE </button></a></button></div>
 
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/prototype_color.png" class="img-fluid uppermargin3" alt=""></div></div>
           </div>
@@ -102,7 +102,7 @@
             The Shared Services Center team of the university found it difficult to attract users to their website. The main objective of the project was to improve the existing website from the insights and pain points uncovered from UX Research while integrating front-end web development.
           </p>
 
-        <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
+        <a href="coeit-ssc.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
       </div>
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/HA.png" class="avatar8 uppermargin3" alt=""></div></div>
           </div>
@@ -131,7 +131,7 @@
             Globally, millions of people suffer from vision-related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid visually impaired individuals in their navigation.
           </p>
 
-        <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> READ MORE </a></button>
+          <a href="mobileapp.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
       </div>
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/baid.png" class="avatar9 uppermargin3" alt=""></div></div>
           </div>
