--- a/projects.html
+++ b/projects.html
@@ -108,7 +108,7 @@
           </div>
     </section>
 
-    <!--
+
     <section class="containerblue">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
@@ -122,8 +122,8 @@
           <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/CR.png" class="avatar8 uppermargin3" alt=""></div></div>
           </div>
     </section>
-    -->
-    <section class="containerblue uppermargin3">
+
+    <section class="uppermargin3">
       <div class="container grid default-grid">
             <div class="row row-xs-sm sample-row">
         <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>B-AID: The navigational voice Application for people who are blind</strong></h1></div>
@@ -133,7 +133,7 @@
 
           <a href="mobileapp.html"><button class="custom-btn btn-1">READ MORE </button></a></button>
       </div>
-          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/baid.png" class="avatar9 uppermargin3" alt=""></div></div>
+          <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/appdc.png" class="avatar7 uppermargin3" alt=""></div></div>
           </div>
     </section>
 
