--- a/coeit-research.html
+++ b/coeit-research.html
@@ -70,7 +70,7 @@
         </div>
       </li> -->
 	   <li class="nav-item active">
-        <a class="nav-link nav-link1" "assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
+        <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
       </li>
     </ul>
   </div>
