--- a/mobileapp.html
+++ b/mobileapp.html
@@ -49,36 +49,41 @@
 </header> -->
 <nav class="navbar navbar-default navbar-expand-lg navbar-light light">
 
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarText">
-		<ul class="navbar-nav m-auto">
-			<li class="nav-item active">
-				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span></a>
-			</li>
-			<!--<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
-					Projects</span>
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
-					<a class="dropdown-item" href="coeit-ssc.html">Shared Servies Center</a>
-					<a class="dropdown-item" href="mobileapp.html">B-AID</a>
-				</div>
-			</li> -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav m-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">PROJECTS</span></a>
+      </li>
 
-			<li class="nav-item active">
-				<a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
-			</li>
-			<li class="nav-item active">
-				<a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
-			</li>
-		</ul>
-	</div>
+      <li class="nav-item active">
+        <a class="nav-link" href="research.html"><span class="whitecolor">RESEARCH</span></a>
+      </li>
+
+
+      <li class="nav-item active">
+        <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
+      </li>
+      <!-- <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="whitecolor">
+          Projects</span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="navigational-aid.html">Trident</a>
+          <a class="dropdown-item" href="coeit-research.html">COEIT Research</a>
+		  <a class="dropdown-item" href="mobileapp.html">B-AID</a>
+        </div>
+      </li> -->
+	   <li class="nav-item active">
+        <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"><span class="whitecolor">RESUME</span></a>
+      </li>
+    </ul>
+  </div>
 </nav>
 <main>
 
