--- a/research.html
+++ b/research.html
@@ -100,10 +100,10 @@
 <section>
   <div class="container grid default-grid">
     <h3>TOWARDS CHI 2022</h3>
-    <h4><strong>Exploring factors enabling HCI exposure in South Asia.</strong></h4>
+    <h4><strong>"It's not very easy to come across HCI": Exploring avenues and challenges in HCI Education across South Asia</strong></h4>
     <p>
-      Our team from HCI for South Asia community is working towards a paper where we would be outlining the factors enabling the exposure to HCI in South Asia.
-      Done in colalaboration with Pranjal Jain, Kartik Joshi, and Taru Jain.
+      Our team from HCI for South Asia community (HCI4SA) is working towards a paper where we would be outlining the factors enabling the exposure to HCI in South Asia.
+      Done in colalaboration with Pranjal Jain, Kartik Joshi, Taru Jain, Dilrukshi Gamage, Sayan Sircar, and Nova Ahmed.
     </p>
     <p>
       More information coming soon...
