--- a/research.html
+++ b/research.html
@@ -99,14 +99,16 @@
 
 <section>
   <div class="container grid default-grid">
-    <h3>TOWARDS CHI 2022</h3>
-    <h4><strong>"It's not very easy to come across HCI": Exploring avenues and challenges in HCI Education across South Asia</strong></h4>
+    <h3>CHI 2022 - PAPER SUBMITTED</h3>
+    <h4><strong>"It's not very easy to come across HCI": Exploring avenues and barriers in HCI Education across South Asia</strong></h4>
     <p>
       Our team from HCI for South Asia community (HCI4SA) is working towards a paper where we would be outlining the factors enabling the exposure to HCI in South Asia.
       Done in colalaboration with Pranjal Jain, Kartik Joshi, Taru Jain, Dilrukshi Gamage, Sayan Sircar, and Nova Ahmed.
     </p>
     <p>
-      More information coming soon...
+      <section class="blockquote-section">
+        <p class="quotemarks justified"><i>Emerging economies such as South Asia have started to venture into the HCI discipline through research and innovation thereby affecting HCI as a knowledge discipline across the region. However, limited research has been conducted to know how HCI learning is imparted and how students get introduced to it. With the advent of innovation in knowledge sharing, newer avenues have emerged that elp students better understand the field. We conducted a survey with 64 participants and follow-up interviews with 12 participants to investigate the avenues of HCI knowledge dissemination in South Asia. We categorized these avenues into Traditional, Emergent, and Intersectional based on findings. We used the analytical lens of social capital theory to understand the implication of avenues in facilitating HCI knowledge dissemination. We found that channels</i></p>
+      </section>
     </p>
 
 </div>
