--- a/research.html
+++ b/research.html
@@ -102,8 +102,7 @@
     <h3>CHI 2022 - PAPER SUBMITTED</h3>
     <h4><strong>"It's not very easy to come across HCI": Exploring avenues and barriers in HCI Education across South Asia</strong></h4>
     <p>
-      Our team from HCI for South Asia community (HCI4SA) is working towards a paper where we would be outlining the factors enabling the exposure to HCI in South Asia.
-      Done in colalaboration with Pranjal Jain, Kartik Joshi, Taru Jain, Dilrukshi Gamage, Sayan Sircar, and Nova Ahmed.
+      Our team from HCI for South Asia community (HCI4SA) submitted a paper to ACM SIGCHI where we would be outline the factors enabling the exposure to HCI in South Asia. Study done in colalaboration with Pranjal Jain, Kartik Joshi, Taru Jain, Dilrukshi Gamage, Sayan Sircar, and Nova Ahmed.
     </p>
     <p>
       <section class="blockquote-section">
