--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/Personal/Logo.png" rel="icon">
-  <link href="assets/img/Personal/Logo.png" rel="apple-touch-icon">
+  <link href="assets/img/Personal/LOGO new.png" rel="icon">
+  <link href="assets/img/Personal/LOGO new.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -70,7 +70,7 @@
 
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-          <h2 align="center"><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
+          <h2 align="center" aria-label="Header Title" alt="Hello there! 👋🏽 I am Anirudh."><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
           <!-- <h3 style="color:#000; font-family: Raleway, sans-serif !important;" align="center"><b>Welcome to my website!</b></h3>
           -->
             <img src="assets/img/Personal/Main Image 4.png" class="avatar6" alt="">
